# rossum-api

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.rst  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yaml  test-and-deploy.yaml
rossum_api/: __init__.py  exceptions.py
rossum_api/clients/: external_async_client.py  external_sync_client.py  internal_async_client.py  internal_sync_client.py
rossum_api/domain_logic/: resources.py  urls.py
rossum_api/models/: __init__.py  annotation.py  rule.py  schema.py
tests/domain_logic/: test_retry.py  test_urls.py
tests/elis_api_client/: test_annotations.py  test_rules.py
tests/internal_clients/: test_internal_async_client.py  test_internal_sync_client.py
tests/models/: test_schema.py
