[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum_api"
version = "3.10.0"
license = {text = "MIT"}
readme = "README.rst"
description = "Python API client for the Rossum platform."
requires-python = ">= 3.10"
dependencies = [
    "aiofiles",
    # The code uses the "case conversion" feature added in this version.
    # See deserialize_default function in models/__init__.py.
    "dacite>=1.9.0",
    "httpx",
    "tenacity",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # for compatibility with tooling such as pip-licenses
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
tests = [
  "codecov",
  "pytest",
  "pytest-asyncio",
  "pytest-httpx>=0.34.0",
  "pytest-cov",
  "ruff",
  "types-aiofiles",
  "pre-commit",
]
docs = [
  "sphinx>=8.2,<9.0",
  "furo",
  "sphinx-autodoc-typehints",
]

[tools.setuptools]
include-package-data = true
packages = ["find"]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [
  "."
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["rossum_api/"]

[tool.ty.rules]
unsupported-operator = "ignore"
index-out-of-bounds = "ignore"

[tool.semantic_release]
upload_to_repository = false
branch = "main"
version_variables = ["rossum_api/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
mode = "init"  # temporary fix to re-generate correctly full Changelog
